[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lmdb_tool"
version = "0.1.0"
description = "Incremental sharded LMDB maintainer for MRI NIfTI datasets."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "lmdb>=1.4.0",
  "numpy>=1.23.0",
  "torch>=2.0.0",
  "monai>=1.3.0",
  "nibabel>=5.0.0",
]

[project.scripts]
lmdb-tool = "lmdb_tool.ingest:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lmdb_tool*"]
